[package]
name = "claude-codust"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = "0.27"
dirs = "5.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["process", "rt-multi-thread", "macros"] }
