[package]
name = "claude-codust"
version = "0.0.3"
edition = "2021"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = "0.27"
dirs = "5.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["process", "rt-multi-thread", "macros", "signal"] }
